@@ -1,3 +1,12 @@
+2006-05-18 Sandro Santilli <strk@refractions.net>
+
+	* source/geom/Geometry.cpp,
+	source/headers/geos/geom/Geometry.h: added
+	covers() and isCoveredBy() predicates.
+	* tests/unit/Makefile.am,
+	tests/unit/geom/Geometry/coversTest.cpp:
+	added test for covers() predicates.
+
 2006-05-17 Sandro Santilli <strk@refractions.net>
 
 	* source/geom/IntersectionMatrix.cpp,
